Actions
Bug #9477
closedBug #9476: loader: Don't leak memory when displaying help.
loader: cstyle update of common/commands.c
Start date:
2018-04-15
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Just as subject is telling. no functional changes.
Updated by Electric Monk almost 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit e4768a3447c8320148c66b297c2acb00217f575d
commit e4768a3447c8320148c66b297c2acb00217f575d Author: Toomas Soome <tsoome@me.com> Date: 2018-07-19T17:02:24.000Z 9477 loader: cstyle update of common/commands.c Reviewed by: Yuri Pankov <yuripv@yuripv.net> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Dan McDonald <danmcd@joyent.com>
Actions